--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^6.9.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
